--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,10 @@ android {
 
 dependencies {
 
-    def composeBom = platform('androidx.compose:compose-bom:2024.04.00')
+    // Dependencia para Navigation
+    implementation("androidx.navigation:navigation-compose:2.7.7")
+
+    def composeBom = platform('androidx.compose:compose-bom:2024.04.01')
     implementation composeBom
 
     implementation 'androidx.compose.material3:material3:1.2.1'
@@ -51,12 +54,12 @@ dependencies {
     implementation 'androidx.compose.ui:ui-tooling-preview'
     debugImplementation 'androidx.compose.ui:ui-tooling'
 
-    implementation 'androidx.activity:activity-compose:1.8.2'
+    implementation 'androidx.activity:activity-compose:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0'
 
     implementation 'androidx.cardview:cardview:1.0.0'
 
-    implementation 'com.google.android.gms:play-services-auth:21.0.0'
+    implementation 'com.google.android.gms:play-services-auth:21.1.0'
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.11.0'
