--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     // Dependencia para Navigation
     implementation("androidx.navigation:navigation-compose:2.7.7")
 
-    def composeBom = platform('androidx.compose:compose-bom:2024.04.01')
+    def composeBom = platform('androidx.compose:compose-bom:2024.05.00')
     implementation composeBom
 
     implementation 'androidx.compose.material3:material3:1.2.1'
@@ -71,11 +71,14 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:22.3.1'
 
     implementation 'com.google.firebase:firebase-storage:20.3.0'
-    implementation 'com.squareup.picasso:picasso:2.5.2'
+
+    // Icons extendidos
+    implementation 'androidx.compose.material:material-icons-extended'
 
     implementation 'com.basgeekball:awesome-validation:4.3'
     implementation 'androidx.annotation:annotation:1.7.1'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.7.0'
+    implementation "androidx.compose.runtime:runtime-livedata:1.6.7"
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0'
     implementation 'com.google.firebase:firebase-firestore:24.11.1'
     implementation 'com.google.android.gms:play-services-maps:18.2.0'
