--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
 
     // Dependencia para Navigation
     implementation("androidx.navigation:navigation-compose:2.7.7")
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-android:2.8.1'
 
     def composeBom = platform('androidx.compose:compose-bom:2024.05.00')
     implementation composeBom
